--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "nbl-tech-challenge",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://itsholmesy.github.io/nbl-tech-challenge-react",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
