--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-vitest": "^0.5.4",
     "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
     "vite": "^5.2.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "vitest-fetch-mock": "^0.2.2"
   }
 }
