--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest --environment jsdom"
   },
   "dependencies": {
+    "eslint-config-vitest-globals": "^1.0.0",
     "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
