--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-vitest": "^0.5.4",
     "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
+    "sass": "^1.77.4",
     "vite": "^5.2.0",
     "vitest": "^1.6.0",
     "vitest-fetch-mock": "^0.2.2"
